// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageSelector should render a HeaderLanguageSelectorItem if it is a header action item 1`] = `
<Translate(HeaderLanguageSelectorItem)
  activeItemCode="en"
  direction="ltr"
  selectorItems={
    Array [
      SelectorItemModel {
        "_code": "de",
        "_href": "/augsburg/de/disclaimer",
        "_name": "Deutsch",
      },
      SelectorItemModel {
        "_code": "en",
        "_href": "/augsburg/en/disclaimer",
        "_name": "English",
      },
      SelectorItemModel {
        "_code": "ar",
        "_href": "/augsburg/ar/disclaimer",
        "_name": "Arabic",
      },
    ]
  }
/>
`;

exports[`LanguageSelector should render a normal Selector if it is not a header action item 1`] = `
<Selector
  activeItemCode="en"
  direction="ltr"
  disabledItemTooltip="noTranslation"
  items={
    Array [
      SelectorItemModel {
        "_code": "de",
        "_href": "/augsburg/de/disclaimer",
        "_name": "Deutsch",
      },
      SelectorItemModel {
        "_code": "en",
        "_href": "/augsburg/en/disclaimer",
        "_name": "English",
      },
      SelectorItemModel {
        "_code": "ar",
        "_href": "/augsburg/ar/disclaimer",
        "_name": "Arabic",
      },
    ]
  }
  verticalLayout={true}
/>
`;
